# tracer

./: .gitignore  CMakeLists.txt  DummyBrdf.cpp  DummyBrdf.h  ball.cpp  ball.h  brdf.cpp  brdf.h  brdfMgr.cpp  brdfMgr.h  camera.cpp  camera.h  cball.cpp  cball.h  checkboard.cpp  checkboard.h  chessboard.cpp  chessboard.h  chessboardTexture.cpp  chessboardTexture.h  circle.cpp  circle.h  color.cpp  color.h  common.cpp  common.h  configure  constTexture.cpp  constTexture.h  cplane.cpp  cplane.h  dummyMaterial.h  fishEyeCamera.cpp  fishEyeCamera.h  frame.cpp  frame.h  geometry.cpp  geometry.h  glass.cpp  glass.h  (+59 more)
.github/workflows/: c-cpp.yml  main.yml  workflow.yml
brdf/: DummyBrdf.cpp  DummyBrdf.h  brdf.cpp  brdf.h  brdfMgr.cpp  conductorBrdf.cpp  conductorBrdf.h  diffuseBrdf.cpp  diffuseBrdf.h  glass.cpp  glass.h  lambertian.cpp  lambertian.h  measuredBrdf.cpp  measuredBrdf.h  microfacet.cpp  microfacet.h  mirror.cpp  mirror.h  powitacq_rgb.cpp  powitacq_rgb.h  refreactorBsdf.cpp  refreactorBsdf.h  roughDielectricBsdf.cpp  roughDielectricBsdf.h
camera/: camera.cpp  camera.h  fishEyeCamera.cpp  fishEyeCamera.h  orthographicCamera.cpp  orthographicCamera.h  pinholeCamera.cpp  pinholeCamera.h
common/: axisDef.h  color.cpp  color.h  common.cpp  common.h  config.cpp  config.h  converter.cpp  converter.h  hitrecord.cpp  hitrecord.h  mathConstantDef.cpp  mathConstantDef.h  mathUtility.cpp  mathUtility.h  noise.cpp  noise.h  resourceDef.cpp  resourceDef.h  sceneDef.h  spectrum.cpp  spectrum.h  tagDef.h  timeRecord.cpp  timeRecorder.cpp  timeRecorder.h  tracerDef.h
document/: memo.txt  readme.md  run_and_mail.sh  run_tracer_multiple.ps1  run_tracer_multiple.sh  trashBox.txt
document/tracer/: readme.md
document/volume/: readme.md
geometry/: ball.cpp  ball.h  boundBox.cpp  boundBox.h  circle.cpp  circle.h  curve.cpp  curve.h  geometry.cpp  geometry.h  mesh.cpp  mesh.h  plane.cpp  plane.h  room.cpp  room.h  tri.cpp  tri.h  triangle.cpp  triangle.h
light/: light.cpp  light.h
main/: main.cpp
material/: combinedMaterial.cpp  combinedMaterial.h  conductorMaterial.cpp  conductorMaterial.h  dielectricMaterial.cpp  dielectricMaterial.h  diffuseMaterial.cpp  diffuseMaterial.h  dummyMaterial.cpp  dummyMaterial.h  glassMaterial.cpp  glassMaterial.h  lambertianMaterial.cpp  lambertianMaterial.h  material.cpp  material.h  materialDef.h  materialManager.cpp  materialManager.h  measuredMaterial.cpp  measuredMaterial.h  microMaterial.cpp  microMaterial.h  mirrorMaterial.cpp  mirrorMaterial.h  mixMaterial.cpp  mixMaterial.h  refreactorMaterial.cpp  refreactorMaterial.h
math/: matrix.h
mathmatic/: frame.cpp  frame.h  matrix.cpp  matrix.h  ray.cpp  ray.h  russianRoulette.cpp  russianRoulette.h  russianRouletter.cpp  russianRouletter.h  transform.cpp  vector.cpp  vector.h
media/: media.cpp  media.h  mist.cpp  mist.h
ray_tracer/: main.cpp
scene/: alphaSceneBuilder.cpp  alphaSceneBuilder.h  betaSceneBuilder.cpp  betaSceneBuilder.h  bunnySceneBuilder.cpp  bunnySceneBuilder.h  bvh.cpp  bvh.h  bvhNode.cpp  bvhNode.h  hitter.cpp  hitter.h  hitterInterface.cpp  hitterInterface.h  mtrlSceneBuilder.cpp  objectpool.cpp  objectpool.h  scene.cpp  scene.h  sceneBuilder.cpp  sceneBuilder.h  simpleBunnySceneBuilder.h  simpleHitter.cpp  simpleHitter.h  simpleSceneBuilder.cpp  teapotSceneBuilder.cpp  volumeSceneBuilder.cpp  volumeSceneBuilder.h
scene_builder/: complexBunnyBuilder.cpp  complexBunnyBuilder.h  complexBunnySceneBuilder.cpp  curveSceneBuilder.cpp  curveSceneBuilder.h  mtrlSceneBuilder.cpp  mtrlSceneBuilder.h  normalMapSceneBuilder.cpp  normalMapSceneBuilder.h  sceneBuilder.cpp  sceneBuilder.h  simpleBunnySceneBuilder.cpp  simpleBunnySceneBuilder.h  simpleSceneBuilder.cpp  simpleSceneBuilder.h  teapotSceneBuilder.cpp  teapotSceneBuilder.h  volumeSceneBuilder.cpp
shape/: vox.cpp  vox.h
test/: tester.cpp  tester.h
texture/: chessboardTexture.cpp  chessboardTexture.h  constTexture.h  imageTexture.cpp  imageTexture.h  noiseTexture.cpp  noiseTexture.h  normalTexture.cpp  normalTexture.h  texture.h  uvTexture.cpp  uvTexture.h
third/assimp/: CMakeLists.txt
third/assimp/code/: CMakeLists.txt
third/lodepng/: CMakeLists.txt
third/powitacq/: CMakeLists.txt
third/powitacq/code/: powitacq_rgb.cpp
tool/visual_sampler_alg/: main.py  requirements.txt  test_exp_sample.py  test_sphere_sample.py
tracer/: neeTracer.cpp  neeTracer.h  neeVolTracer.cpp  neeVolTracer.h  randomTracer.cpp  randomTracer.h  simpleTracer.cpp  simpleTracer.h  tracer.cpp  tracer.h  volTracer.cpp  volTracer.h
volume/: vox.cpp  vox.h
